--- a/web/send.html
+++ b/web/send.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>SendMessage</title>
-    <script src='./js/jquery.min.js?ver=1.12.4'></script>
+    <script src='js/jquery.min.js?ver=1.12.4'></script>
     <style>
         #main{
             margin: auto 100px;
